// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack.config.js returns proper configs for package config 1`] = `
Object {
  "devtool": "source-map",
  "entry": "src/index.js",
  "externals": Object {
    "read-pkg": "read-pkg",
    "read-pkg-up": "read-pkg-up",
    "resolve-bin": "resolve-bin",
  },
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules\\\\/\\(\\?!\\(@10up\\\\/block-components\\)\\\\/\\)\\.\\*/,
        "test": /\\\\\\.js\\$/,
        "use": Array [
          "/node_modules/thread-loader/dist/cjs.js",
          Object {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": Object {
              "cacheDirectory": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      Object {
        "include": Array [
          "/assets/css",
          "/includes/blocks",
        ],
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          Object {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": Object {
              "sourceMap": true,
              "url": true,
            },
          },
          Object {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": Object {
              "postcssOptions": Object {
                "config": "/config/postcss.config.js",
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\{jpg,jpeg,png,gif,svg,eot,ttf,woff,woff2\\}/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": Object {
    "concatenateModules": false,
    "minimizer": Array [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"terserOptions":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}},
    ],
  },
  "output": Object {
    "filename": "dist/index.js",
    "library": Object {
      "name": "componentLibrary",
      "type": "umd",
    },
  },
  "performance": Object {
    "maxAssetSize": 100000,
  },
  "plugins": Array [
    ESLintWebpackPlugin: {"extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"fix":false},
    CleanWebpackPlugin: {},
    MiniCssExtractPlugin: {"ignoreOrder":false,"chunkFilename":"[id].css"},
    ImageminPlugin: {"disable":true,"imageminOptions":{"plugins":[null,null,null,null]},"externalImages":{"context":".","sources":[],"destination":".","fileName":null},"cacheFolder":null},
    StylelintWebpackPlugin: {"files":"**/*.css","stylelintPath":"stylelint","context":"/assets","allowEmptyInput":true,"configFile":"/config/stylelint.config.js"},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    CleanExtractedDeps: {},
  ],
  "resolve": Object {
    "alias": Object {
      "lodash-es": "lodash",
    },
  },
  "stats": Object {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, ie >= 11, Firefox ESR, last 2 versions",
}
`;

exports[`webpack.config.js returns proper configs for package config with peer deps 1`] = `
Object {
  "devtool": "source-map",
  "entry": "src/index.js",
  "externals": Object {
    "lodash": "lodash",
    "read-pkg": "read-pkg",
    "read-pkg-up": "read-pkg-up",
    "resolve-bin": "resolve-bin",
  },
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules\\\\/\\(\\?!\\(@10up\\\\/block-components\\)\\\\/\\)\\.\\*/,
        "test": /\\\\\\.js\\$/,
        "use": Array [
          "/node_modules/thread-loader/dist/cjs.js",
          Object {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": Object {
              "cacheDirectory": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      Object {
        "include": Array [
          "/assets/css",
          "/includes/blocks",
        ],
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          Object {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": Object {
              "sourceMap": true,
              "url": true,
            },
          },
          Object {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": Object {
              "postcssOptions": Object {
                "config": "/config/postcss.config.js",
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\{jpg,jpeg,png,gif,svg,eot,ttf,woff,woff2\\}/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": Object {
    "concatenateModules": false,
    "minimizer": Array [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"terserOptions":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}},
    ],
  },
  "output": Object {
    "filename": "dist/index.js",
    "library": Object {
      "name": "componentLibrary",
      "type": "umd",
    },
  },
  "performance": Object {
    "maxAssetSize": 100000,
  },
  "plugins": Array [
    ESLintWebpackPlugin: {"extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"fix":false},
    CleanWebpackPlugin: {},
    MiniCssExtractPlugin: {"ignoreOrder":false,"chunkFilename":"[id].css"},
    ImageminPlugin: {"disable":true,"imageminOptions":{"plugins":[null,null,null,null]},"externalImages":{"context":".","sources":[],"destination":".","fileName":null},"cacheFolder":null},
    StylelintWebpackPlugin: {"files":"**/*.css","stylelintPath":"stylelint","context":"/assets","allowEmptyInput":true,"configFile":"/config/stylelint.config.js"},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    CleanExtractedDeps: {},
  ],
  "resolve": Object {
    "alias": Object {
      "lodash-es": "lodash",
    },
  },
  "stats": Object {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, ie >= 11, Firefox ESR, last 2 versions",
}
`;

exports[`webpack.config.js returns proper configs for project configs 1`] = `
Object {
  "devtool": "source-map",
  "entry": Object {
    "entry1": "entry1.js",
    "entry2": "entry2.js",
    "entry3": "entry3.js",
  },
  "externals": Object {
    "jquery": "jQuery",
    "lodash": "lodash",
  },
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules\\\\/\\(\\?!\\(@10up\\\\/block-components\\)\\\\/\\)\\.\\*/,
        "test": /\\\\\\.js\\$/,
        "use": Array [
          "/node_modules/thread-loader/dist/cjs.js",
          Object {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": Object {
              "cacheDirectory": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      Object {
        "include": Array [
          "/assets2/css",
          "/includes2/blocks",
        ],
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          Object {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": Object {
              "sourceMap": true,
              "url": false,
            },
          },
          Object {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": Object {
              "postcssOptions": Object {
                "config": "/config/postcss.config.js",
              },
            },
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "concatenateModules": false,
    "minimizer": Array [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"terserOptions":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}},
    ],
  },
  "output": Object {
    "filename": [Function],
    "path": "/dist",
  },
  "performance": Object {
    "maxAssetSize": 100000,
  },
  "plugins": Array [
    ESLintWebpackPlugin: {"extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"fix":false},
    CleanWebpackPlugin: {},
    MiniCssExtractPlugin: {"ignoreOrder":false,"chunkFilename":"[id].css"},
    CopyPlugin: {},
    ImageminPlugin: {"disable":true,"imageminOptions":{"plugins":[null,null,null,null]},"externalImages":{"context":".","sources":[],"destination":".","fileName":null},"cacheFolder":null},
    StylelintWebpackPlugin: {"files":"**/*.css","stylelintPath":"stylelint","context":"/assets2","allowEmptyInput":true,"configFile":"/config/stylelint.config.js"},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    DependencyExtractionWebpackPlugin: {"combineAssets":false,"combinedOutputFile":null,"injectPolyfill":true,"outputFormat":"php","useDefaults":true},
    CleanExtractedDeps: {},
  ],
  "resolve": Object {
    "alias": Object {
      "lodash-es": "lodash",
    },
  },
  "stats": Object {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, ie >= 11, Firefox ESR, last 2 versions",
}
`;
